// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`models/i18n/utils//LangFlagMap renders correctly 1`] = `
<div>
  UkFlagIcon
</div>
`;

exports[`models/i18n/utils//LangFlagMap renders correctly 2`] = `
<div>
  GreekFlagIcon
</div>
`;

exports[`models/i18n/utils//LangFlagMap renders correctly 3`] = `
<span>
  notExistingCode
</span>
`;
